--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <p>Hello Teacher</p>
+    <p>Hello Teacher, Class Web Programming</p>
   </body>
 </html>
