--- a/index.html
+++ b/index.html
@@ -5,6 +5,101 @@
     <title></title>
   </head>
   <body>
-    <p>Hello Teacher, Class Web Programming</p>
+    <!-- Insert image -->
+    <!-- </head> -->
+    <body>
+  	<table cellspacing="20">
+  		<tbody><tr>
+  			<td><img src="https://images.freeimages.com/images/small-previews/9fe/butterfly-on-a-flower-1641762.jpg"alt="Eliana Cifuentes Image."></td>
+  			<td><h1>Eliana Cifuentes</h1>
+  				<p><em> Student <a href="https://www.matrixcollege.ca//">Matrix College</a></em></p>
+  				<p>My Class Web Programming</p>
+  			</td>
+  		</tr>
+  	</tbody></table>
+  	<br>
+    <br>
+
+
+    <h2>Objective</h2>
+    <hr>
+    <p>
+    I wish to apply my work experiences and my recent knowledge as well as the future
+    Knowledge that will be acquired at <b>Bois de Boulogne College</b> in level 1 and 2 Quality
+    Test Automation and soon in my Software Testing training at <b>Matrix College</b>.
+    </p>
+    <hr>
+
+    <h2>Education</h2>
+    <ul>
+      <li>2021-2022 - Matrix College. <i>Software Testing</i></li>
+      <li>2010-2011 - Rosemont College. <i>Manager Windows Network</i></li>
+    </ul>
+
+    <h2>Work Experience</h2>
+
+  	<table border="1"> <!-- everything in between the tag -
+  						the content of the actual table.
+  						no style applied by the browser, by default -->
+  		<!-- This section - 2.1. -->
+  		<thead>
+  			<tr>
+  				<th>Dates</th>
+  				<th>Work</th>
+  			</tr>
+  		</thead>
+  		<!-- This section - 2.2. -->
+  		<tbody>
+  			<tr>
+  				<td>2013/03 - 2013-07</td>
+  				<td>IT SUPPORT TECHNICIAN</td>
+  			</tr><tr>
+  				<td>2011-05 - 2011-07</td>
+  				<td>MANAGER WINDOWS NETWORK</td>
+  		</tr></tbody>
+  		<tfoot>
+
+  		</tfoot>
+  	</table>
+  	<br>
+
+    <h3>
+  	<!-- <a href="https://cegepgim1001.github.io/resume/contact.html">Skills :</a> -->
+  	<!-- <a href="https://github.com/jucelisa/test/blob/main/Resume.html">Skills :</a> -->
+    <a href="https://github.com/jucelisa.github.io/test/blob/main/Resume.html">Skills :</a>
+  	</h3>
+    <p>My skills include:</p>
+    <ul>
+  <!--	</h3> -->
+  	<table>
+  		<tbody>
+  			<tr>
+  				<td>Programming</td>
+  				<td>⭐⭐⭐⭐⭐</td>
+  			</tr>
+  			<tr>
+  				<td>Testing Tools Techniques.</td>
+  				<td>⭐⭐⭐⭐</td>
+  			</tr>
+  			<tr>
+  				<td>SDLC.</td>
+  				<td>⭐⭐⭐</td>
+  			</tr><tr>
+  				<td>Relational Analysis.</td>
+  				<td>⭐⭐</td>
+  		</tr></tbody>
+  	</table>
+
+    </ul>
+
+    <h2>Hobbies</h2>
+    <ul>
+      <li>Reading Books.</li>
+      <li>Listening to Music.</li>
+      <li>Playing Logic Games.</li>
+      <li>Traveling.</li>
+      <li>Photography</li>
+    </ul>
+    <hr />  
   </body>
 </html>
