--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <h3>
   	<!-- <a href="https://cegepgim1001.github.io/resume/contact.html">Skills :</a> -->
   	<!-- <a href="https://github.com/jucelisa/test/blob/main/Resume.html">Skills :</a> -->
-    <a href="https://github.com/jucelisa.github.io/test/blob/main/Resume.html">Skills :</a>
+    <a href="https://jucelisa.github.io/test01/">Skills :</a>
   	</h3>
     <p>My skills include:</p>
     <ul>
@@ -100,6 +100,6 @@
       <li>Traveling.</li>
       <li>Photography</li>
     </ul>
-    <hr />  
+    <hr />
   </body>
 </html>
